--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,17 @@
         <meta charset="utf-8">
     </head>
     <body>
-        
+        <div id="app-container">
+            <div id="widget-section">
+                <div class="day-section" id="1"></div>
+                <div class="day-section" id="2"></div>
+                <div class="day-section" id="3"></div>
+
+            </div>
+            <div id="search-section">
+                <input type="text" id="search-bar">
+                <button id="search-button">Search</button>
+            </div>
+        </div>
     </body>
 </html>
